add fullWidth to button

--- a/src/app/pages/auth/pages/login/login.component.html
+++ b/src/app/pages/auth/pages/login/login.component.html
@@ -16,6 +16,7 @@
     class="mb-3"
     [disabled]="loginForm.invalid"
     label="ورود"
+    [fullWidth]="true"
   ></app-custom-button>
 
   <span routerLink="/auth/phone" class="cursor-pointer text-primary font-sm-regular">رمز عبور خود را فراموش کرده اید ؟</span>
