refactor create.component.ts

--- a/src/app/pages/panel/pages/create/create.component.html
+++ b/src/app/pages/panel/pages/create/create.component.html
@@ -1,5 +1,7 @@
-<ng-container #containerRef></ng-container>
+<!--<ng-container #containerRef></ng-container>-->
 
-<ng-template #templateRef let-model=context>
-  <app-dynamic-form  [model]="model"></app-dynamic-form>
-</ng-template>
+<!--<ng-template #templateRef let-model=context>-->
+<!--  <app-dynamic-form #form [model]="model"></app-dynamic-form>-->
+
+<!--  <span>{{form.dynamicFormGroup.getRawValue()|json}}</span>-->
+<!--</ng-template>-->
