handle fetch summary and show crud actions

--- a/src/app/components/base-info-grid/base-info-grid.component.html
+++ b/src/app/components/base-info-grid/base-info-grid.component.html
@@ -2,6 +2,7 @@
   #gridActions
   [gridHistory]="gridHistory"
   [form]="form"
+  [showCrudActions]="showCrudActions"
   [selectedRow]="selectedRow"
   (clickHistory)="handleClickHistory($event)"
   (onDelete)="handleDelete($event)"
