--- a/src/app/components/base-info-grid/base-info-grid.component.html
+++ b/src/app/components/base-info-grid/base-info-grid.component.html
@@ -1,20 +1,23 @@
-<app-grid-actions
-  #gridActions
-  [gridHistory]="gridHistory"
-  [form]="form"
-  [showCrudActions]="showCrudActions"
-  [selectedRow]="selectedRow"
-  (clickHistory)="handleClickHistory($event)"
-  (onDelete)="handleDelete($event)"
-></app-grid-actions>
+<div [class]="class">
+  <app-grid-actions
+    #gridActions
+    [gridHistory]="gridHistory"
+    [form]="form"
+    [showCrudActions]="showCrudActions"
+    [selectedRow]="selectedRow"
+    (clickHistory)="handleClickHistory($event)"
+    (onDelete)="handleDelete($event)"
+  ></app-grid-actions>
 
-<ag-grid-angular
-  style="width:100%;height: 300px"
-  class="ag-theme-alpine"
-  [columnDefs]="columnDefs"
-  [gridOptions]="gridOptions"
-  (rowDoubleClicked)="handleRowDbClicked($event)"
-  (rowClicked)="selectedRow = $event.data"
-  (paginationChanged)="selectedRow = null"
-  (gridReady)="handleGirdReady($event)"
-></ag-grid-angular>
+  <ag-grid-angular
+    style="width:100%;height: 300px"
+    class="ag-theme-alpine"
+    [columnDefs]="columnDefs"
+    [gridOptions]="gridOptions"
+    (rowDoubleClicked)="handleRowDbClicked($event)"
+    (rowClicked)="selectedRow = $event.data"
+    (paginationChanged)="selectedRow = null"
+    (gridReady)="handleGirdReady($event)"
+  ></ag-grid-angular>
+
+</div>
