--- a/src/app/pages/panel/pages/import/import.component.html
+++ b/src/app/pages/panel/pages/import/import.component.html
@@ -5,30 +5,23 @@
   <div class="col-3">
     <app-custom-dropdown
       formControlName="sheets"
-      label="شیت مورد نظر را انتخاب نمایید"
+      label="صفحه مورد نظر را انتخاب نمایید"
       [options]="sheetOptions"
     ></app-custom-dropdown>
   </div>
 </form>
 
-<app-dynamic-form #dynamicForm [model]="[model]"></app-dynamic-form>
+<app-dynamic-form  #dynamicForm [model]="[model]" (onSubmit)="handleSubmitForm($event)"></app-dynamic-form>
 
-<div class="flex flex-row-reverse mb-3">
-  <app-custom-button
-    (onClick)="handleClick()"
-    [disabled]="dynamicForm.dynamicFormGroup.invalid"
-    label="ارسال"
-    icon="pi pi-upload"
-  ></app-custom-button>
+<div class="mt-3">
+  <ag-grid-angular
+    style="width:100%;height: 310px"
+    class="ag-theme-alpine"
+    [columnDefs]="columnDefs"
+    [rowData]="rowData"
+    [enableRtl]="true"
+    [gridOptions]="gridOptions"
+    [pagination]="true"
+    [paginationPageSize]="5"
+  ></ag-grid-angular>
 </div>
-
-<ag-grid-angular
-  style="width:100%;height: 310px"
-  class="ag-theme-alpine"
-  [columnDefs]="columnDefs"
-  [rowData]="rowData"
-  [enableRtl]="true"
-  [gridOptions]="gridOptions"
-  [pagination]="true"
-  [paginationPageSize]="5"
-></ag-grid-angular>
