refactor import component

--- a/src/app/pages/panel/pages/import/import.component.html
+++ b/src/app/pages/panel/pages/import/import.component.html
@@ -1,6 +1,6 @@
 <form [formGroup]="form" class="flex align-items-center">
   <div class="col-3">
-    <input type="file" formControlName="file" appReadExcel (onSheetsReady)="handleSheets($event)" #readExcel>
+    <input type="file" formControlName="file" appReadExcel (onSheetsReady)="sheetOptions = $event" #readExcel>
   </div>
   <div class="col-3">
     <app-custom-dropdown
