handle lookup form

--- a/src/app/components/base-info-grid/base-info-grid.component.html
+++ b/src/app/components/base-info-grid/base-info-grid.component.html
@@ -15,7 +15,7 @@
     [columnDefs]="columnDefs"
     [gridOptions]="gridOptions"
     (rowDoubleClicked)="handleRowDbClicked($event)"
-    (rowClicked)="selectedRow = $event.data"
+    (rowClicked)="handleRowClicked($event)"
     (paginationChanged)="selectedRow = null"
     (gridReady)="handleGirdReady($event)"
   ></ag-grid-angular>
