handle master id for create and update

--- a/src/app/components/base-info-grid/base-info-grid.component.html
+++ b/src/app/components/base-info-grid/base-info-grid.component.html
@@ -8,6 +8,8 @@
       [selectedRow]="selectedRow"
       (clickHistory)="handleClickHistory($event)"
       (onDelete)="handleDelete($event)"
+      (onUpdate)="handleUpdate($event)"
+      (onCreate)="handleCreate()"
     ></app-grid-actions>
 
     <ag-grid-angular
