--- a/src/styles.scss
+++ b/src/styles.scss
@@ -66,3 +66,13 @@ input[type="number"]::-webkit-outer-spin-button {
   border: 1px solid $forbidden;
 }
 
+.border-2 {
+  border: 1px solid $color-2 !important;
+  border-radius: 6px;
+}
+
+.border-bottom-2 {
+  border-bottom: 1px solid $color-2 !important;
+}
+
+
