handle sort change method

--- a/src/app/components/base-info-grid/base-info-grid.component.html
+++ b/src/app/components/base-info-grid/base-info-grid.component.html
@@ -20,6 +20,7 @@
       (rowClicked)="handleRowClicked($event)"
       (paginationChanged)="selectedRow = null"
       (gridReady)="handleGirdReady($event)"
+      (sortChanged)="handleSortChange($event)"
     ></ag-grid-angular>
 
   </div>
