handle import excel

--- a/src/app/components/base-info-grid/base-info-grid.component.html
+++ b/src/app/components/base-info-grid/base-info-grid.component.html
@@ -10,6 +10,7 @@
       (onDelete)="handleDelete($event)"
       (onUpdate)="handleUpdate($event)"
       (onCreate)="handleCreate()"
+      (onImport)="handleImport()"
     ></app-grid-actions>
 
     <ag-grid-angular
