--- a/src/app/pages/panel/pages/import/import.component.html
+++ b/src/app/pages/panel/pages/import/import.component.html
@@ -11,7 +11,7 @@
   </div>
 </form>
 
-<app-dynamic-form  #dynamicForm [model]="[model]" (onSubmit)="handleSubmitForm($event)"></app-dynamic-form>
+<app-general-form  #generalForm [model]="[model]" (onSubmit)="handleSubmitForm($event)"></app-general-form>
 
 <div class="mt-3">
   <ag-grid-angular
