--- a/src/app/pages/panel/pages/attachment/attachment.component.html
+++ b/src/app/pages/panel/pages/attachment/attachment.component.html
@@ -1,32 +1,20 @@
-<form [formGroup]="documentForm">
+<app-general-form [model]="[model]" (onSubmit)="handleSubmitForm($event)"></app-general-form>
 
-  <div class="flex align-items-end">
 
-    <div class="col-6">
-      <app-custom-input-text
-        label="نام فایل"
-        formControlName="name"
-      ></app-custom-input-text>
-    </div>
-
-    <div class="col-6">
-      <app-custom-upload-file
-        formControlName="attachmentFile"
-      ></app-custom-upload-file>
-    </div>
-
-  </div>
-
-  <div class="col-12">
-    <app-custom-text-area
-      label="توضیحات"
-      formControlName="desc"
-    ></app-custom-text-area>
-  </div>
-
-  <app-custom-button
-    [disabled]="documentForm.invalid"
-    label="ثبت"
-  ></app-custom-button>
-
-</form>
+<div class="mt-3">
+  <button>ایجاد</button>
+  <button (click)="handleUpdateAttachment()">ویرایش</button>
+  <button (click)="handleDeleteAttachment()">حذف</button>
+  <button (click)="handleDeleteAllAttachment()">حذف همه</button>
+  <ag-grid-angular
+    style="width:100%;height: 310px"
+    class="ag-theme-alpine"
+    [columnDefs]="columnDefs"
+    [rowData]="rowData"
+    [enableRtl]="true"
+    [gridOptions]="gridOptions"
+    [pagination]="true"
+    [paginationPageSize]="5"
+    (rowSelected)="handleRowSelected($event)"
+  ></ag-grid-angular>
+</div>
