--- a/src/app/pages/panel/pages/attachment/attachment.component.html
+++ b/src/app/pages/panel/pages/attachment/attachment.component.html
@@ -2,10 +2,11 @@
 
 
 <div class="mt-3">
-  <button>ایجاد</button>
-  <button (click)="handleUpdateAttachment()">ویرایش</button>
-  <button (click)="handleDeleteAttachment()">حذف</button>
-  <button (click)="handleDeleteAllAttachment()">حذف همه</button>
+  <app-grid-actions
+    [accessFormActions]="accessFormActions"
+    [selectedRow]="selectedRow"
+    (onAction)="handleOnAction($event)"
+  ></app-grid-actions>
   <ag-grid-angular
     style="width:100%;height: 310px"
     class="ag-theme-alpine"
