--- a/src/app/components/base-info-grid/base-info-grid.component.html
+++ b/src/app/components/base-info-grid/base-info-grid.component.html
@@ -7,6 +7,7 @@
       [selectedRow]="selectedRow"
       (clickHistory)="handleClickHistory($event)"
       (onAction)="handleOnAction($event)"
+      [exportExcelSource]="exportExcelSource"
     ></app-grid-actions>
 
     <ag-grid-angular
