--- a/src/app/pages/panel/pages/import/import.component.html
+++ b/src/app/pages/panel/pages/import/import.component.html
@@ -1,6 +1,9 @@
 <form [formGroup]="importExcelForm" class="flex align-items-center">
   <div class="col-3">
-    <input type="file" formControlName="file" appReadExcel (onSheetsReady)="sheetOptions = $event" #readExcel>
+    <app-custom-import-excel
+      formControlName="file"
+      (onSheetsReady)="sheetOptions = $event"
+    ></app-custom-import-excel>
   </div>
   <div class="col-3">
     <app-custom-dropdown
@@ -11,7 +14,7 @@
   </div>
 </form>
 
-<app-general-form  #generalForm [model]="[model]" (onSubmit)="handleSubmitForm($event)"></app-general-form>
+<app-general-form #generalForm [model]="[model]" (onSubmit)="handleSubmitForm($event)"></app-general-form>
 
 <div class="mt-3">
   <ag-grid-angular
