--- a/src/app/pages/panel/pages/import/import.component.html
+++ b/src/app/pages/panel/pages/import/import.component.html
@@ -17,14 +17,8 @@
 <app-general-form #generalForm [model]="[model]" (onSubmit)="handleSubmitForm($event)"></app-general-form>
 
 <div class="mt-3">
-  <ag-grid-angular
-    style="width:100%;height: 310px"
-    class="ag-theme-alpine"
+  <app-custom-grid
     [columnDefs]="columnDefs"
     [rowData]="rowData"
-    [enableRtl]="true"
-    [gridOptions]="gridOptions"
-    [pagination]="true"
-    [paginationPageSize]="5"
-  ></ag-grid-angular>
+  ></app-custom-grid>
 </div>
