--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,6 @@
-<ngx-ui-loader></ngx-ui-loader>
+<!--<ngx-ui-loader></ngx-ui-loader>-->
+<ngx-spinner bdColor = "rgba(0, 0, 0, 0.8)" size = "large" color = "#3B82F6" type="square-jelly-box" [fullScreen] = "true">
+  <p style="font-size: 20px; color: white">صبر کنید </p>
+</ngx-spinner>
 <app-custom-toast></app-custom-toast>
 <router-outlet></router-outlet>
