handle advanced search

--- a/src/app/components/base-info-grid/base-info-grid.component.html
+++ b/src/app/components/base-info-grid/base-info-grid.component.html
@@ -40,6 +40,7 @@
       [gridHistory]="gridHistory"
       [accessFormActions]="accessFormActions"
       [selectedRow]="selectedRow"
+      [hasCriteria]="!!criteria"
       (clickHistory)="handleClickHistory($event)"
       (onAction)="handleOnAction($event)"
     ></app-grid-actions>
