--- a/src/app/components/dialog/advance-search-dialog/advance-search-dialog.component.html
+++ b/src/app/components/dialog/advance-search-dialog/advance-search-dialog.component.html
@@ -29,7 +29,7 @@
   </div>
   <app-custom-button
     type="button"
-    label="ثبت"
+    icon="pi pi-plus"
     class="mb-2"
     (onClick)="handleAddCriteria()"
     [disabled]="advanceSearchForm.invalid"
