add NOT_IN criteria

--- a/src/app/components/dialog/advance-search-dialog/advance-search-dialog.component.html
+++ b/src/app/components/dialog/advance-search-dialog/advance-search-dialog.component.html
@@ -18,6 +18,7 @@
 </div>
 
 <app-dynamic-dialog-actions
+  [disabled]="!(!!criteriaList.length)"
   (confirmed)="ref.close(this.criteriaList)"
   (closed)="ref.close()"
 ></app-dynamic-dialog-actions>
