--- a/src/app/components/base-info-grid/base-info-grid.component.html
+++ b/src/app/components/base-info-grid/base-info-grid.component.html
@@ -44,6 +44,7 @@
           [form]="form"
           [colDefs]="columnDefs"
           [resetForm]="false"
+          [icon]="'pi pi-search'"
           (onAddCriteria)="handleAddCriteria($event)"
         ></app-criteria-builder>
       </div>
