--- a/src/app/components/base-info-grid/base-info-grid.component.html
+++ b/src/app/components/base-info-grid/base-info-grid.component.html
@@ -1,30 +1,4 @@
 <ng-container *ngIf="fetchSummary;else elseback">
-  <form [formGroup]="searchSummaryForm" class="flex align-items-center flex-wrap">
-
-    <div class="col-4">
-      <app-custom-input-text
-        formControlName="code"
-        label="کد"
-      ></app-custom-input-text>
-    </div>
-
-    <div class="col-4">
-      <app-custom-input-text
-        formControlName="title"
-        label="عنوان"
-      ></app-custom-input-text>
-
-    </div>
-
-    <app-custom-button
-      type="button"
-      (onClick)="handleSummarySearch()"
-      label="جستجو"
-      icon="pi pi-search"
-      class="mb-2"
-    ></app-custom-button>
-
-  </form>
   <ng-container *ngTemplateOutlet="gridForm"></ng-container>
 </ng-container>
 
@@ -35,10 +9,11 @@
 </ng-template>
 
 <ng-template #gridForm>
+
   <div [class]="class">
 
     <div class="flex align-items-center justify-content-between">
-      <div class="flex-grow-1" *ngIf="!fetchSummary">
+      <div class="flex-grow-1">
         <app-criteria-builder
           #criteriaBuilder
           [form]="form"
@@ -70,4 +45,5 @@
     ></ag-grid-angular>
 
   </div>
+
 </ng-template>
