--- a/src/app/components/base-info-grid/base-info-grid.component.html
+++ b/src/app/components/base-info-grid/base-info-grid.component.html
@@ -33,6 +33,8 @@
       (rowDoubleClicked)="handleRowDbClicked($event)"
       (rowClicked)="handleRowClicked($event)"
       (sortChanged)="handleSortChange($event)"
+      [getContextMenuItems]="getContextMenuItems"
+      [suppressContextMenu]="false"
     ></ag-grid-angular>
     <p-button styleClass="p-button-sm" (onClick)="handleDelete()" [label]="'delete'" [disabled]="!_dataSource"></p-button>
 
