handle create grid dynamic

--- a/src/app/components/base-info-grid/base-info-grid.component.html
+++ b/src/app/components/base-info-grid/base-info-grid.component.html
@@ -35,6 +35,8 @@
       (sortChanged)="handleSortChange($event)"
     ></ag-grid-angular>
 
+<!--    <div #gridContainer></div>-->
+
   </div>
 
 </ng-template>
