--- a/src/app/components/tab-menu/tab-menu.component.scss
+++ b/src/app/components/tab-menu/tab-menu.component.scss
@@ -1,17 +1,17 @@
 @import "src/scss/variabels";
 
 .tab-menu-wrapper {
-  max-width: 100%;
+  max-width: fit-content;
+  min-height: 40px ;
   border: solid 1px #ccc;
-  min-height: 60px;
   display: block;
   background: white;
   border-radius: 4px;
   overflow: auto;
 
   .tab-menu-item {
-    padding: 20px 10px;
-    border-left: solid 1px #ccc;
+    height: 40px;
+    padding: 0 6px;
     color: rgba(0, 0, 0, 0.87);
     display: flex;
     flex-direction: row;
@@ -21,9 +21,13 @@
     background: white;
 
     &:has(.active) {
-      border-top: 2px solid $primary;
-
+      background-color: #263238;
+      a {
+        color: #ccc;
+      }
+      
       i {
+        color: #ccc;
         font-size: 0.6rem;
       }
     }
