--- a/src/app/components/cascade-menu/cascade-menu.component.scss
+++ b/src/app/components/cascade-menu/cascade-menu.component.scss
@@ -1,7 +1,56 @@
-[cdkMenuItem] {
+.menu-item {
   display: flex;
   justify-content: space-between;
   align-items: center;
   width: 8rem;
   gap: 1rem;
+}
+
+@keyframes fall {
+  0% {
+    transform: scaleY(0);
+  }
+  100% {
+    transform: scaleY(1);
+  }
+}
+
+
+.overlay {
+  background: #fff;
+  margin-top: 10px;
+  box-shadow: 0 1rem 3rem rgba(0 0 0 / 18%);
+  border-radius: 0.25rem;
+}
+
+.overlay-fall {
+  animation: fall 300ms ease-in-out forwards;
+  transform-origin: top center;
+}
+
+.overlay-container {
+  padding: 0.5rem 0;
+  margin-right: 9px;
+
+  ul {
+    list-style: none;
+    width: 10rem;
+
+    li {
+      padding: 0.35rem 1.5rem;
+      font-size: 14px;
+      font-weight: 400;
+      color: #495057;
+      cursor: pointer;
+
+      &:hover {
+        background-color: #eff2f3;
+      }
+
+      img {
+        margin-left: 0.6rem;
+        height: 12px;
+      }
+    }
+  }
 }
