--- a/src/app/components/cascade-menu/cascade-menu.component.scss
+++ b/src/app/components/cascade-menu/cascade-menu.component.scss
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  width: 8rem;
+  width: 100%;
   gap: 1rem;
 }
 
@@ -30,12 +30,13 @@
 
 .overlay-container {
   padding: 0.5rem 0;
-  margin-right: 9px;
+  //margin-right: 9px;
+  min-width: 10rem;
+  width: auto;
 
   ul {
     list-style: none;
-    width: 10rem;
-
+    width: 100%;
     li {
       padding: 0.35rem 1.5rem;
       font-size: 14px;
