--- a/src/app/components/cascade-menu/cascade-menu.component.scss
+++ b/src/app/components/cascade-menu/cascade-menu.component.scss
@@ -45,7 +45,8 @@
       cursor: pointer;
 
       &:hover {
-        background-color: #eff2f3;
+        background-color: #EFF6FF;
+        color: blue;
       }
 
       img {
