--- a/src/app/components/dashboard/header/header.component.html
+++ b/src/app/components/dashboard/header/header.component.html
@@ -1,7 +1,7 @@
 <div class="head" [ngClass]="getHeaderClass()">
   <div class="head-content">
     <div class="head-content-right">
-      <app-my-customers></app-my-customers>
+      <app-header-menu></app-header-menu>
     </div>
     <div class="head-content-left">
       <app-user-avatar></app-user-avatar>
