changes in menu

--- a/src/app/components/cascade-menu/cascade-menu.component.scss
+++ b/src/app/components/cascade-menu/cascade-menu.component.scss
@@ -19,7 +19,7 @@
 .overlay {
   background: #fff;
   margin-top: 10px;
-  box-shadow: 0 1rem 3rem rgba(0 0 0 / 18%);
+  box-shadow: 0 2px 12px 0 rgba(0, 0, 0, 0.1);
   border-radius: 0.25rem;
 }
 
